<resources>
    <string name="app_name">MyFinances</string>

    <string name="launch_title">Welcome to MyFinances</string>

    <string name="providers_header">Auth providers</string>
    <string name="providers_google">Google</string>
    <string name="providers_email">Email</string>

    <string name="configuration_required">Configuration required - see README.md</string>
    <string name="google_label_missing_config">Google configuration missing</string>

    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>

    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>


    <!-- Fragment Home -->
    <string name="balance">Balance:</string>
    <string name="delete_trans_ques">Are you sure you want to delete this transaction?</string>


    <!-- Auth UI - Signed in -->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="graphs">Graphs</string>
    <string name="sign_out_failed">"Sign out Failed"</string>

    <string name="save">Save</string>


    <!-- AddTransactionActivity -->
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="add_trans_suc">Transaction added successfully</string>


    <!-- WalletsActivity -->
    <string name="delete_wallet_question">Are you sure you want to delete this wallet?</string>


    <!-- AddWalletActivity and EditWalletActivity -->
    <string name="name">Name</string>
    <string name="initial_balance">Initial Balance</string>
    <string name="add_wallet_suc">Wallet added successfully</string>
    <string name="delete">Delete</string>


    <!-- BackupOrRestoreActivity -->
    <string name="textGoogleDrive">Google Drive Backup/Restore</string>
    <string name="btnConnectDrive">Connect with Google Drive</string>
    <string name="localBackup">Local Backup/Restore</string>
    <string name="checkboxBackup">Backup automatically</string>
    <string name="backupFile">Backup to file</string>
    <string name="restoreFile">Restore from File</string>
    <string name="alertDialogBackup">This will override your previous backup. Are you sure you want to do it?</string>
    <string name="backup_success">File backed up successfully!</string>
    <string name="alertDialogRestore">This will override your current data. Are you sure you want to do this?</string>
    <string name="restore_success">File restored successfully!</string>
    <string name="file_not_found">There is no backup file.</string>


    <!-- DriveActivity -->
    <string name="backupDrive">Backup to Google Drive</string>
    <string name="restoreDrive">Restore from Google Drive</string>
    <string name="backup_drive_success">File backed up to Google Drive successfully!</string>
    <string name="alertDialogDriveRestore">This will override your current data on Google Drive. Are you sure you want to do this?</string>
    <string name="restore_drive_success">File restored from Google Drive successfully!</string>
    <string name="drive_file_not_found">There is no backup file on Google Drive.</string>
    <string name="choose_Account">Choose Account</string>


    <!-- Action bar -->
    <string name="settings">Settings</string>
    <string name="log_off">Log Off</string>
    <string name="about">About</string>
    <string name="export">Export</string>
    <string name="drive_sync">Backup/Restore</string>
    <string name="add_wallet">Wallets</string>
    <string name="calendar">Calendar</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="disp_text">
      \n\n
      1/ UPLOAD (upload icon) uploads a text file to Google Drive, creating a simple tree
         directory structure in the process.\n
         The createTree() method allows for testing of different CRUD primitives (search,
         create folder, etc…) in the process.\n\n
      2/ DOWNLOAD (download icon) scans the tree created by the createTree() method. If the
         object is a file, it\'s metadata is updated (description field), the content is
         downloaded.\n\n
      3/ DELETE (X - delete icon) scans the tree created by the createTree() method and deletes
         all the files and folders in the process\n
    </string>

    <!-- menu -->
    <string name="action_scan">UPLOAD file</string>
    <string name="action_list">DOWNLOAD all files</string>
    <string name="action_delete">DELETE all files</string>
    <string name="action_account">Select Google Account…</string>

    <string name="err_auth_sha">CHECK PackageName / SHA1\nin Developers Console!</string>
    <string name="err_auth_dono">UNSPECIFIED GOOGLE DRIVE\nACCESS FAILURE!</string>
    <string name="err_auth_accpick">NO ACCOUNT SELECTED!</string>
    <string name="err_auth_nogo">ACCESS NOT AUTHORIZED!</string>

    <!--loans-->
    <string name="loans">Loans</string>
    <string name="add_loan_suc">Loan added successfully</string>
    <string name="edit_loan_suc">Loan edited successfully</string>
    <string name="thirdP">third party</string>
    <string name="lender">im the lender</string>
    <string name="lendee">im the lendee</string>
    <string name="date">Due Date</string>
    <string name="delete_loan_ques">Are you sure you want to delete this loan?</string>
    <string name="payed">payed</string>
    <string name="label">label</string>
    <string name="pick">pick a color for this category</string>
    <string name="add_cat_suc">category successfully added</string>

</resources>
