<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/drive_sync"
        android:icon="@drawable/ic_action_drive_sync"
        app:showAsAction="always"
        android:title="@string/drive_sync"/>

    <item
        android:id="@+id/wallets"
        android:icon="@drawable/ic_action_add_wallet"
        app:showAsAction="never"
        android:title="@string/add_wallet" />

    <item
        android:id="@+id/action_bar_export"
        android:icon="@drawable/ic_action_export"
        app:showAsAction="never"
        android:title="@string/export"/>

    <item
        android:id="@+id/action_bar_about"
        android:icon="@drawable/ic_action_about"
        app:showAsAction="never"
        android:title="@string/about"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        android:title="@string/settings" />
  
    <item
        android:id="@+id/categories"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        android:title="@string/categories" />
</menu>