<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_action_categories"
        android:title="@string/categories" />

    <item
        android:id="@+id/navigation_graphics"
        android:icon="@drawable/ic_action_graphics"
        android:title="@string/graphics" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/settings" />

    <item
        android:id="@+id/navigation_log_off"
        android:icon="@drawable/ic_action_log_off"
        android:title="@string/log_off" />
</menu>