<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_backup_or_restore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:orientation="vertical"
    tools:context="pt.uc.dei.cm.myfinances.activities.BackupOrRestoreActivity">

    <TextView
        android:id="@+id/textGoogleDrive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/textGoogleDrive"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnConnectGoogleDrive"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/btnConnectDrive"
        android:textAllCaps="false"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/dimen16"
        android:background="@color/color_light_gray"/>
    
    <TextView
        android:id="@+id/localBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/localBackup"
        android:textSize="16sp"/>
    
    <CheckBox
        android:id="@+id/checkboxBackup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:layout_gravity="center_horizontal"
        android:text="@string/checkboxBackup"/>

    <Button
        android:id="@+id/btnLocalBackup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/backupFile"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btnRestoreFile"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/restoreFile"
        android:textAllCaps="false"/>

</LinearLayout>