<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:id="@+id/add_wallet_layout"
    tools:context="pt.uc.dei.cm.myfinances.activities.EditWalletActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/dimen16"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/initial_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginBottom="@dimen/dimen16"
        android:inputType="numberDecimal"
        android:hint="@string/initial_balance"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:layout_below="@id/initial_balance">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make this my current wallet?"/>

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen16"
            android:text="@string/no"
            android:layout_marginBottom="@dimen/dimen8"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>

    <Button
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:text="@string/delete"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_alignParentRight="true"
        android:text="@string/save"/>

</RelativeLayout>