<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:id="@+id/add_transaction_layout"
    tools:context="pt.uc.dei.cm.myfinances.activities.AddTransactionActivity">

    <TextView
        android:id="@+id/aux"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="calendar here"/>

    <Spinner
        android:id="@+id/spinner_categories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:layout_below="@id/aux"></Spinner>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen16"
        android:orientation="horizontal"
        android:layout_below="@id/spinner_categories">

        <RadioButton
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen16"
            android:text="@string/expense"
            android:layout_marginBottom="@dimen/dimen8"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:id="@+id/amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:layout_marginBottom="@dimen/dimen16"
        android:inputType="numberDecimal"
        android:hint="@string/amount"/>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/amount"
        android:layout_marginBottom="@dimen/dimen16"
        android:inputType="text"
        android:hint="@string/comment"/>

    <Button
        android:id="@+id/button_save_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment"
        android:text="@string/save"/>

</RelativeLayout>