<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:id="@+id/add_wallet_layout"
    tools:context="pt.uc.dei.cm.myfinances.activities.AddWalletActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginBottom="@dimen/dimen16"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/initial_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginBottom="@dimen/dimen16"
        android:inputType="numberDecimal"
        android:hint="@string/initial_balance"/>

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/initial_balance"
        android:text="@string/save"/>

</RelativeLayout>