<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:id="@+id/add_loan_layout"
    tools:context="pt.uc.dei.cm.myfinances.activities.AddLoanActivity">

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen8"
        android:text="@string/date"
        android:fontFamily="@font/ubuntu"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_loan_date"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/date_txt"
        android:layout_marginBottom="@dimen/dimen16"
        android:fontFamily="@font/ubuntu"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/text_lender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_loan_date"
        android:layout_marginBottom="@dimen/dimen8"
        android:text="Loan type"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"/>

    <RadioGroup
        android:id="@+id/lenderRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_lender"
        android:layout_marginBottom="@dimen/dimen16"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/lender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen16"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lender"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/colorPrimary"/>

        <RadioButton
            android:id="@+id/lendee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/lendee"
            android:fontFamily="@font/ubuntu"
            android:textColor="@color/colorPrimary"/>
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lenderRadioGroup">

        <EditText
            android:id="@+id/add_loan_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:fontFamily="@font/ubuntu"
            android:layout_marginBottom="@dimen/dimen16"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_thirdPArty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_amount">

        <EditText
            android:id="@+id/thirdP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/input_amount"
            android:layout_marginBottom="@dimen/dimen16"
            android:hint="@string/thirdP"
            android:fontFamily="@font/ubuntu"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_save_loan"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/input_thirdPArty"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        android:fontFamily="@font/ubuntu"
        android:textSize="15sp"/>
</RelativeLayout>