<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen16"
    android:id="@+id/addCat"
    tools:context="pt.uc.dei.cm.myfinances.activities.AddCategoryActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_name">

        <EditText
            android:id="@+id/add_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen24"
            android:hint="@string/label"
            android:textColorHint="@color/colorPrimaryLight"
            android:fontFamily="@font/ubuntu"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen8"
        android:id="@+id/txtV"
        android:text="@string/pick"
        android:layout_below="@id/input_name"
        android:textStyle="bold"
        android:fontFamily="@font/ubuntu"
        android:textSize="17sp"
        android:textColor="@color/colorPrimary"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_below="@id/txtV"
        android:layout_marginBottom="@dimen/dimen24"
        android:id="@+id/colorButton"
        android:text="@string/btn_color"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ubuntu"
        android:textAllCaps="false"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/btnSaveCategory"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/colorButton"
        android:text="@string/save"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ubuntu"
        android:textAllCaps="false"
        android:textSize="15sp"/>
</RelativeLayout>